--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Yet Another Github Page
 title: meechanic.github.io
-google_analytics: UA-176920806-1
+google_analytics: G-8XR4PS2QJQ
 theme: jekyll-theme-cayman
